--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,21 +1,21 @@
 # Core
 pytz==2018.9
-Django==2.2.13
+Django==3.2
 newrelic==4.12.0.113
 
 # For the persistence stores
-psycopg2-binary==2.7.7
-dj-database-url==0.5.0
+psycopg2
+dj-database-url
 
 # Model Tools
-django-model-utils==3.1.2
-django_unique_upload==0.2.1
+django-model-utils
+django_unique_upload
 
 # Rest apis
-djangorestframework==3.9.1
-Markdown==3.0.1
-django-filter==2.1.0
-django-cors-headers==3.1.1
+djangorestframework
+Markdown
+django-filter
+django-cors-headers
 drf-yasg==1.17.0
 
 # Developer Tools
@@ -35,8 +35,8 @@ coverage==4.5.2
 
 # Static and Media Storage
 django-storage-swift
-django-storages==1.7.1
-boto3==1.9.93
+django-storages
+boto3
 
 # Settings
 django-constance[database]==2.4.0
@@ -45,11 +45,11 @@ django-constance[database]==2.4.0
 requests==2.22.0
 django-webpack-loader
 sendgrid==6.2.0
-django-multiselectfield==0.1.12
+django-multiselectfield
 textile==4.0.1
-django-formtools==2.2
+django-formtools
 
 # Authentication
 datapunt_keycloak_oidc
 mozilla-django-oidc==1.2.2
-djangorestframework-simplejwt==4.4.0
+djangorestframework-simplejwt
