--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -27,6 +27,8 @@ ENV NODE_VERSION 12
 RUN curl -sL https://deb.nodesource.com/setup_${NODE_VERSION}.x | bash
 # and install node
 RUN apt-get install -y nodejs
+# and install npm
+RUN apt-get install -y npm
 
 # install nginx
 RUN apt-get install -y nginx
