added a - and printing versions

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -26,11 +26,13 @@ RUN apt-get install -y curl
 # get install script and version and pass it to execute:
 ENV NODE_VERSION 12
 ENV NPM_VERSION 6
-RUN curl -sL https://deb.nodesource.com/setup_${NODE_VERSION}.x | bash
+RUN curl -sL https://deb.nodesource.com/setup_${NODE_VERSION}.x | bash -
 # and install node
 RUN apt-get install -y nodejs
 # install nginx
 RUN apt-get install -y nginx
+RUN node -v
+RUN npm -v
 
 # RUN apt-get install -y --no-install-recommends apt-utils
 
