printing the node install file to screen

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -27,7 +27,13 @@ RUN apt-get -y install locales
 RUN apt-get install -y curl
 # get install script and version and pass it to execute:
 
-RUN curl -sL https://deb.nodesource.com/setup_${NODE_VERSION}.x | bash -
+RUN curl -sL https://deb.nodesource.com/setup_${NODE_VERSION}.x | tee /tmp/setup_${NODE_VERSION}.x
+
+RUN chmod +x /tmp/setup_${NODE_VERSION}.x \
+    && /tmp/setup_${NODE_VERSION}.x \
+    && rm /tmp/setup_${NODE_VERSION}.x
+
+
 # and install node
 RUN apt-get install -y nodejs
 RUN node -v
