--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -16,7 +16,7 @@ ENV NPM_VERSION 6
 
 # update
 RUN apt-get update
-RUN apt-get install libpq-dev build-essential -y
+RUN apt-get install libpq-dev build-essential ca-certificates -y
 
 RUN pip install --upgrade pip
 RUN pip install uwsgi
