--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -18,6 +18,8 @@ ENV NPM_VERSION 6
 RUN apt-get update
 RUN apt-get install libpq-dev build-essential ca-certificates -y
 
+RUN update-ca-certificates
+
 RUN pip install --upgrade pip
 RUN pip install uwsgi
 
