--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -11,7 +11,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 coverage==4.5.2
 cryptography==36.0.2
-datapunt-keycloak-oidc==0.5.1
+git+https://github.com/tvanoort85/keycloak_oidc.git
 debtcollector==2.5.0
 decorator==5.1.1
 dj-database-url==0.5.0
