--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -18,7 +18,9 @@ ENV NPM_VERSION 6
 RUN apt-get update
 RUN apt-get install libpq-dev build-essential ca-certificates -y
 
-RUN update-ca-certificates --fresh
+COPY ./certificates/adp_rootca.crt /usr/local/share/ca-certificates/adp_rootca.crt
+RUN chmod 644 /usr/local/share/ca-certificates/adp_rootca.crt \
+  && update-ca-certificates --fresh
 
 RUN pip install --upgrade pip
 RUN pip install uwsgi
