--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -11,7 +11,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 coverage==4.5.2
 cryptography==36.0.2
-git+https://github.com/tvanoort85/keycloak_oidc.git
+datapunt-keycloak-oidc @ git+https://github.com/tvanoort85/keycloak_oidc.git@ef7766307ad2280a7686ef15de36bdcd13ecca46
 debtcollector==2.5.0
 decorator==5.1.1
 dj-database-url==0.5.0
@@ -24,6 +24,8 @@ django-model-utils==4.2.0
 django-multiselectfield==0.1.12
 django-nose==1.4.6
 django-picklefield==3.0.1
+django-ranged-response==0.2.0
+django-simple-captcha==0.5.18
 django-storage-swift==1.2.19
 django-storages==1.12.3
 django-unique-upload==0.2.1
@@ -71,6 +73,7 @@ parso==0.8.3
 pbr==5.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==10.0.0
 prompt-toolkit==2.0.10
 psycopg2==2.9.3
 ptyprocess==0.7.0
@@ -95,7 +98,7 @@ ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
 s3transfer==0.5.2
 sendgrid==6.2.0
-sentry-sdk==0.7.10
+sentry-sdk==1.28.1
 six==1.16.0
 sqlparse==0.4.2
 stevedore==3.5.0
@@ -104,9 +107,9 @@ textile==4.0.1
 tornado==6.1
 traitlets==5.1.1
 uritemplate==4.1.1
-urllib3==1.25.11
+urllib3==2.0.3
+uWSGI==2.0.21
 wcwidth==0.2.5
 webencodings==0.5.1
 wrapt==1.14.0
 zipp==3.7.0
-django-simple-captcha==0.5.17
