--- a/app/.env
+++ b/app/.env
@@ -1,7 +1,7 @@
 DJANGO_SETTINGS_MODULE=settings.settings
 DJANGO_SECRET_KEY=local
 DJANGO_DEBUG=False
-DJANGO_ALLOWED_HOSTS=0.0.0.0,localhost
+DJANGO_ALLOWED_HOSTS=0.0.0.0,localhost,omslagroute.local
 
 DATABASE_NAME=omslagroute
 DATABASE_USER=omslagroute
