--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,17 @@
-# FROM python:3.8-bullseye
+ARG NODE_VERSION=20
+
+FROM node:$NODE_VERSION-bullseye AS node
+
 FROM python:3.12-bullseye
+
+COPY --from=node /usr/lib /usr/lib
+COPY --from=node /usr/local/lib /usr/local/lib
+COPY --from=node /usr/local/include /usr/local/include
+COPY --from=node /usr/local/bin /usr/local/bin
+
+# Check if node and npm are available
+RUN node -v
+RUN npm -v
 
 RUN adduser --system datapunt
 RUN adduser datapunt sudo
@@ -12,8 +24,6 @@ ARG INVENTORY
 ENV COMMIT_HASH=${COMMIT_HASH}
 ENV BRANCH_NAME=${BRANCH_NAME}
 ENV INVENTORY=${INVENTORY}
-ENV NODE_VERSION 14
-ENV NPM_VERSION 6
 
 # update
 RUN apt-get update
@@ -28,20 +38,8 @@ RUN pip install uwsgi
 
 RUN apt-get -y install locales
 
-# install curl
-RUN apt-get install -y curl
-# get install script and version and pass it to execute:
-
-#RUN curl -sL https://deb.nodesource.com/setup_${NODE_VERSION}.x | bash -
-
-# and install node
-RUN apt-get install -y nodejs npm
-RUN node -v
-RUN npm -v
 # install nginx
 RUN apt-get install -y nginx
-
-# RUN apt-get install -y --no-install-recommends apt-utils
 
 RUN mkdir -p /static
 RUN mkdir -p /app
@@ -63,10 +61,13 @@ ENV LC_ALL nl_NL.UTF-8
 WORKDIR /app
 
 RUN npm install
+
+# Rebuild node-sass to overwrite local changes depending on Docker node environment.
+RUN npm rebuild node-sass
+
 COPY requirements.txt /app/
 RUN ./node_modules/.bin/node-sass -o ./assets/bundles/ static_src/sass
 RUN ./node_modules/.bin/webpack --config webpack.config.js --mode production
-
 
 RUN pip install --no-cache-dir -r requirements.txt
 
