--- a/app/package.json
+++ b/app/package.json
@@ -13,25 +13,29 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.5.3",
-    "node-sass": "4.12.0",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.2.1",
-    "vue-loader": "^15.9.2",
-    "vue-resource": "^1.5.1",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.41.5",
-    "webpack-bundle-tracker": "^0.4.3",
-    "webpack-cli": "^3.3.10"
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "node-sass": "9.0.0",
+    "sass-loader": "^13.3.3",
+    "style-loader": "^3.3.3",
+    "vue-loader": "^17.4.2",
+    "vue-resource": "^1.5.3",
+    "vue-template-compiler": "^2.7.16",
+    "webpack": "^5.89.0",
+    "webpack-bundle-tracker": "^3.0.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@vue/cli": "^4.5.4",
-    "axios": "^0.19.2",
-    "vue": "^2.6.11",
-    "vue-moment": "^4.1.0"
+    "@vue/cli": "^5.0.8",
+    "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
+    "vue": "^3.4.5"
+  },
+  "overrides": {
+    "got": "^14.0.0",
+    "http-cache-semantics": "^4.1.1"
   },
   "babel": {
     "presets": [
