--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,20 @@
 version: "3"
+
 services:
+  database:
+    image: amsterdam/postgres12
+    shm_size: '512m'
+    ports:
+      - "5409:5432"
+    environment:
+      POSTGRES_DB: omslagroute
+      POSTGRES_USER: omslagroute
+      POSTGRES_PASSWORD: insecure
+    volumes:
+      - type: volume
+        source: pg_data
+        target: /var/lib/postgresql/data
+
   omslagroute:
     image: ${REGISTRY:-127.0.0.1:5001}/${REPOSITORY:-salmagundi/wonen-omslagroute}:${VERSION:-latest}
     build:
@@ -10,6 +25,12 @@ services:
       - "127.0.0.1:8088:8080"
     environment:
       - DATABASE_NAME=omslagroute
-      - DATABASE_USER=salmagundi
+      - DATABASE_USER=omslagroute
       - DATABASE_PASSWORD=insecure
-      - DATABASE_HOST=psql-postgresql
+      - DATABASE_HOST=database
+
+networks:
+  default:
+    name: omslagroute
+volumes:
+  pg_data:
