--- a/app/deploy/test/docker-compose.yml
+++ b/app/deploy/test/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '2'
-
 services:
   database:
-    image: amsterdam/postgres11
+    image: postgis/postgis:14-3.2
     shm_size: '512m'
     environment:
       POSTGRES_DB: omslagroute
