--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,6 +1,6 @@
 services:
   database:
-    image: amsterdam/postgres12
+    image: postgis/postgis:14-3.2
     shm_size: '512m'
     ports:
       - "5409:5432"
@@ -9,9 +9,7 @@ services:
       POSTGRES_USER: omslagroute
       POSTGRES_PASSWORD: insecure
     volumes:
-      - type: volume
-        source: pg_data
-        target: /var/lib/postgresql/data
+      - pg_data:/var/lib/postgresql/data
 
   omslagroute:
     image: ${REGISTRY:-127.0.0.1:5001}/${REPOSITORY:-salmagundi/wonen-omslagroute}:${VERSION:-latest}
