--- a/.github/workflows/main.workflow.yml
+++ b/.github/workflows/main.workflow.yml
@@ -1,4 +1,4 @@
-name: Main, build test
+name: Install & build
 
 on:
   push:
@@ -9,32 +9,28 @@ on:
       - main
 
 jobs:
-  install-dependencies:
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: 3.12
-
       - name: Build Docker image
         run: docker compose -f docker-compose.local.yml build
-
       - name: Start images
         run: docker compose -f docker-compose.local.yml up -d
 
       - if: ${{ failure() }}
-      name: "ON FAILURE: Which containers were running while failing?"
-      run: docker ps -a
+        name: "ON FAILURE: Which containers were running while failing?"
+        run: docker ps -a
 
-    - if: ${{ failure() }}
-      name: "ON FAILURE: logs"
-      run: docker logs omslagroute-salmagundi_wonen_omslagroute
+      - if: ${{ failure() }}
+        name: "ON FAILURE: logs"
+        run: docker logs omslagroute-salmagundi_wonen_omslagroute
 
-    - if: ${{ failure() }}
-      name: "ON FAILURE: Database logs"
-      run: docker logs omslagroute-database-1
+      - if: ${{ failure() }}
+        name: "ON FAILURE: Database logs"
+        run: docker logs omslagroute-database-1
