--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,12 +1,20 @@
-# Set update schedule for GitHub Actions
-
 version: 2
 updates:
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "npm" 
+    directory: "/app" 
     schedule:
       interval: "weekly"
     open-pull-requests-limit: 100
     ignore:
-      - dependency-name: "*" # This will ignore all dependencies
+      - dependency-name: "*" 
         update-types: ["version-update:semver-patch"]
+
+  - package-ecosystem: "pip"
+    directory: "/app" 
+    schedule:
+      interval: "weekly"
+
+  - package-ecosystem: "github-actions"
+    directory: "/.github/workflows" 
+    schedule:
+      interval: "weekly"
