--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -116,3 +116,4 @@ opencensus-ext-django==0.8.0
 opencensus-ext-logging==0.1.1
 opencensus-ext-postgresql==0.1.3
 opencensus-ext-requests==0.8.0
+openpyxl
