--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -23,7 +23,7 @@ opencensus-ext-postgresql>=0.1.3,<1.0.0
 opencensus-ext-requests>=0.8.0,<1.0.0
 openpyxl>=3.1.5,<4.0.0
 python-magic>=0.4.27,<1.0.0
-python>=4.6.0,<5.0.0
+python-swiftclient>=4.6.0,<5.0.0
 requests>=2.32.3,<3.0.0
 textile>=4.0.3,<5.0.0
 
