--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -12,7 +12,7 @@ django-simple-captcha>=0.6.2,<1.0.0
 django-webpack-loader>=3.1.1,<4.0.0
 djangorestframework>=3.15.2,<4.0.0
 djangorestframework_simplejwt>=5.5.0,<6.0.0
-Django>=5.1.6,<6.0.0
+Django==5.0.8
 mozilla-django-oidc==3.0.0
 opencensus>=0.11.2,<1.0.0
 opencensus-context>=0.1.3,<1.0.0
@@ -27,7 +27,7 @@ python-swiftclient>=4.6.0,<5.0.0
 requests>=2.32.3,<3.0.0
 textile>=4.0.3,<5.0.0
 
-django-storages
+
 
 # debtcollector==2.5.0
 # decorator==5.1.1
