--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -9,6 +9,7 @@ django-filter
 django-formtools>=2.5.1,<3.0.0
 django-multiselectfield @ git+https://github.com/remyvdwereld/django-multiselectfield.git # Latest version of django-multiselectfield (0.1.12) not compatible with Django=5 so use this fork.
 django-simple-captcha>=0.6.2,<1.0.0
+django-storages>=1.14.5,<2.0.0
 django-webpack-loader>=3.1.1,<4.0.0
 djangorestframework>=3.15.2,<4.0.0
 djangorestframework_simplejwt>=5.5.0,<6.0.0
