--- a/app/package.json
+++ b/app/package.json
@@ -5,36 +5,29 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compilecss": "node-sass -o ./assets/bundles/ static_src/sass",
-    "compile-css-watch": "node-sass -o ../static_compiled/css sass --watch",
+    "compilecss": "sass ./static_src/sass:./assets/bundles/",
+    "compile-css-watch": "sass --watch sass:../static_compiled/css",
     "compile:js": "./node_modules/.bin/webpack --config webpack.config.js",
     "compile:js:watch": "./node_modules/.bin/webpack --config webpack.config.js --watch"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.7",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.8.1",
-    "node-sass": "9.0.0",
-    "sass-loader": "^13.3.3",
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
+    "sass-loader": "^16.0.5",
     "style-loader": "^3.3.3",
     "vue-loader": "^17.4.2",
-    "vue-resource": "^1.5.3",
-    "vue-template-compiler": "^2.7.16",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   },
   "dependencies": {
-    "@vue/cli": "^5.0.8",
     "axios": "^1.7.4",
     "dayjs": "^1.11.10",
+    "sass": "^1.85.1",
     "vue": "^3.4.5"
-  },
-  "overrides": {
-    "got": "^14.0.0",
-    "http-cache-semantics": "^4.1.1"
   },
   "babel": {
     "presets": [
