--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "applicationinsights (>=0.11.10,<1.0.0)",
     "azure-core (>=1.29.3,<2.0.0)", 
     "azure-identity (>=1.20.0,<2.0.0)",
+    "azure-monitor-opentelemetry (>=1.7.0,<2.0.0)",
     "azure-storage-blob (>=12.19.0,<13.0.0)",
     "cachetools (>=6.2.0,<7.0.0)",
     "datapunt-keycloak-oidc @ git+https://github.com/remyvdwereld/keycloak_oidc.git@5420da523be0cc195efac7f0553b24dcda554418",
@@ -25,14 +26,8 @@ dependencies = [
     "djangorestframework (>=3.15.2,<4.0.0)",
     "djangorestframework_simplejwt (>=5.5.0,<6.0.0)",
     "mozilla-django-oidc (>=3.0.0)",
-    "opencensus (>=0.11.2,<1.0.0)", 
-    "opencensus-context (>=0.1.3,<1.0.0)",
-    "opencensus-ext-azure (>=1.1.9,<2.0.0)",
-    "opencensus-ext-django (>=0.8.0,<1.0.0)",
-    "opencensus-ext-logging (>=0.1.1,<1.0.0)",
-    "opencensus-ext-postgresql (>=0.1.3,<1.0.0)",
-    "opencensus-ext-requests (>=0.8.0,<1.0.0)",
     "openpyxl (>=3.1.5,<4.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
     "python-magic (>=0.4.27,<1.0.0)",
     "python-swiftclient (>=4.6.0,<5.0.0)",
     "requests (>=2.32.3,<3.0.0)",
