--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "azure-storage-blob (>=12.19.0,<13.0.0)",
     "cachetools (>=6.2.0,<7.0.0)",
     "datapunt-keycloak-oidc @ git+https://github.com/remyvdwereld/keycloak_oidc.git@5420da523be0cc195efac7f0553b24dcda554418",
-    "Django (>=5.1.7)",
+    "django (==5.2.11)",
     "django-constance (>=4.3.2,<5.0.0)",
     "django-cors-headers (>=4.7.0,<5.0.0)",
     "django-filter (>=4.2.0)",
